--- a/dynamicalFragments/res/layout/fragment1.xml
+++ b/dynamicalFragments/res/layout/fragment1.xml
@@ -16,3 +16,15 @@
         android:textColor="@android:color/holo_red_light"
         android:textSize="25sp"
         android:textStyle="bold" />
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Fragment1"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+</LinearLayout>
+
+
