--- a/Zadatak1_rjesenjeIgor/layout/activity_main.xml
+++ b/Zadatak1_rjesenjeIgor/layout/activity_main.xml
@@ -1,54 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<androidx.constraintlayout.widget.ConstraintLayout 
-xmlns:android="http://schemas.android.com/apk/res/android"     
-xmlns:app="http://schemas.android.com/apk/res-auto"     
-xmlns:tools="http://schemas.android.com/tools"     
-        android:layout_width="match_parent"     
-        android:layout_height="match_parent"     
-        tools:context=".MainActivity">      
-      <ImageButton         
-                android:id="@+id/imageButton"         
-                android:layout_width="wrap_content"         
-                android:layout_height="wrap_content"         
-                android:layout_marginTop="82dp"         
-                android:layout_marginBottom="34dp"         
-                app:layout_constraintBottom_toTopOf="@+id/textView"         
-                app:layout_constraintEnd_toEndOf="parent"         
-                app:layout_constraintStart_toStartOf="parent"         
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/lion" />
-                android:layout_marginEnd="76dp"         
-                android:layout_marginBottom="39dp"         
-                android:textSize="45dp"         
-                android:textAlignment="center"         
-                android:text=""         
-                app:layout_constraintBottom_toTopOf="@+id/imageButton2"         
-                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-    <ImageButton         
-                 android:id="@+id/imageButton2"         
-                 android:layout_width="0dp"         
-                 android:layout_height="0dp"         
-                 android:layout_marginStart="77dp"         
-                 android:layout_marginEnd="77dp"         
-                 android:layout_marginBottom="148dp"         
-                 app:layout_constraintBottom_toBottomOf="parent"         
-                 app:layout_constraintEnd_toEndOf="parent"         
-                 app:layout_constraintStart_toStartOf="parent"         
-                 app:layout_constraintTop_toBottomOf="@+id/textView"         
-                 app:srcCompat="@drawable/zebra" />      
-      <TextView         
-                android:id="@+id/textView"         
-                android:layout_width="0dp"         
-                android:layout_height="0dp"         
-                android:layout_marginStart="76dp"         
-                android:layout_marginEnd="76dp"         
-                android:layout_marginBottom="39dp"         
-                android:textSize="45dp"
-                android:textAlignment="center"
-                android:text=""
-                app:layout_constraintBottom_toTopOf="@+id/imageButton2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageButton" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+xmlns:app="http://schemas.android.com/apk/res-auto" 
+xmlns:tools="http://schemas.android.com/tools" 
+android:layout_width="match_parent" 
+android:layout_height="match_parent" 
+tools:context=".MainActivity"> 
+ 
+</androidx.constraintlayout.widget.ConstraintLayout> 
